fix print on mobile

--- a/src/components/print/styles.css
+++ b/src/components/print/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
+
 @page {
   margin: 0;
 }
@@ -5,9 +7,10 @@
 @media print {
   .print {
     width: 264px;
-    font-family: Arial, monospace;
+    font-family: Courier Prime, monospace;
     margin: auto;
-    font-size: 0.6rem;
+    font-weight: 500;
+    font-size: 0.9rem;
     text-size-adjust: none;
     -webkit-text-size-adjust: none;
     -moz-text-size-adjust: none;
